tests/suite/pass/lexer/string_literal.ny
fn main() {
    let s = "hello"
    print(s)
}
