tests/suite/fail/generated/stderr_full/stderr_use_after_move.ny
fn main() {
    let s = "x"
    let t = s
    print(s)
}
